<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks" />
    <item
        android:id="@+id/allChatsFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />
    <item
        android:id="@+id/appliedFragment"
        android:icon="@drawable/ic_applied"
        android:title="@string/apply" />
</menu>