<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.onboarding.OnboardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.flod.loadingbutton.LoadingButton
        android:id="@+id/skip_btn"
        style="@style/SkipButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_26sdp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.flod.loadingbutton.LoadingButton
        android:id="@+id/previous"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:fontFamily="@font/omnes_medium"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.flod.loadingbutton.LoadingButton
        android:id="@+id/next"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:fontFamily="@font/omnes_medium"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/skip_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>