<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".screens.auth.national.NationalDataFragment">


    <include
        android:id="@+id/national_app_bar"
        layout="@layout/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/national_app_bar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/national_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:src="@drawable/upload_image" />

            <TextView
                android:id="@+id/national_image"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/national_image" />

            <include
                android:id="@+id/national_image_card"
                layout="@layout/add_certificate_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/national_saved"
                layout="@layout/project_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <TextView
                android:id="@+id/personal_image"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/personal_image" />

            <include
                android:id="@+id/personal_image_card"
                layout="@layout/add_certificate_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/personal_saved"
                layout="@layout/project_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.flod.loadingbutton.LoadingButton
                android:id="@+id/national_button"
                style="@style/MainButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/blur_view_national"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow_color_2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>